[project]
name = "anycam2ros"
version = "1.0.0"
description = "Turn any camera into ROS2 image topics. Unified config for VLA deployment and SFT data collection."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ros2", "camera", "v4l2", "robotics", "image-tools", "vla"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/ly-geming/AnyCam2Ros"
Repository = "https://github.com/ly-geming/AnyCam2Ros"
Issues = "https://github.com/ly-geming/AnyCam2Ros/issues"

[project.scripts]
anycam2ros = "scripts.camera_cli:main"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
